[package]
name = "qt_csv_demo"
version = "0.0.1"
publish = false
authors = ["Damion K. Wilson <damionw@gmail.com"]
edition = "2018"

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"

polars = { git = "https://github.com/pola-rs/polars", rev = "rust-polars-0.18.0" }
# polars = "0.15.1"

serde_json = "1.0.66"

# [build-dependencies]
# qt_ritual_build = "0.5.0"
